# pty-manager-mcp

./: POWER.md  README.md  mcp.json  pyproject.toml
src/pty_manager_mcp/: __init__.py  server.py
